--- a/todo-app/todo-frontend/Dockerfile
+++ b/todo-app/todo-frontend/Dockerfile
@@ -8,6 +8,10 @@ ENV REACT_APP_BACKEND_URL=http://localhost:3000
 
 RUN npm ci
 
+ENV CI=true
+
+RUN npm test
+
 RUN npm run build
 
 FROM nginx:1.20-alpine
