move backend dev to container

--- a/todo-app/todo-backend/.dockerignore
+++ b/todo-app/todo-backend/.dockerignore
@@ -1,4 +1,10 @@
 .dockerignore
 .gitignore
+.env
 node_modules
 Dockerfile
+dev.Dockerfile
+docker-compose.dev.yml
+docker-compose.yml
+mongo_data
+redis_data
