--- a/todo-app/docker-compose.dev.yml
+++ b/todo-app/docker-compose.dev.yml
@@ -6,9 +6,10 @@ services:
       dockerfile: dev.Dockerfile
     volumes:
       - ./todo-frontend:/usr/src/app
-    ports:
-      - 3333:3000
+    environment:
+      - REACT_APP_BACKEND_URL=http://localhost:8080/api/
     container_name: todo-front-dev
+
   nginx:
     image: nginx:1.20.1
     volumes:
@@ -18,3 +19,38 @@ services:
     container_name: reverse-proxy
     depends_on:
       - app
+      - server
+
+  mongo:
+    image: mongo
+    ports:
+      - 3456:27017
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example
+      MONGO_INITDB_DATABASE: the_database
+    volumes:
+      - ./todo-backend/mongo/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js
+      - ./todo-backend/mongo_data:/data/db
+    container_name: todo-back-mongo
+
+  redis:
+    image: redis
+    ports:
+      - 6378:6379
+    command: ['redis-server', '--appendonly', 'yes']
+    volumes:
+      - ./todo-backend/redis_data:/data
+
+  server:
+    image: todo-back-dev
+    build:
+      context: ./todo-backend
+      dockerfile: dev.Dockerfile
+    volumes:
+      - ./todo-backend:/usr/src/app
+    container_name: todo-back-dev
+    environment:
+      - MONGO_URL=mongodb://the_username:the_password@mongo:27017/the_database
+      - REDIS_URL=redis://redis:6379
+      - PORT=3000
