--- a/todo-app/nginx.conf
+++ b/todo-app/nginx.conf
@@ -1,3 +1,5 @@
+events { }
+
 http {
   server {
     listen 80;
@@ -8,6 +10,10 @@ http {
       proxy_set_header Connection 'upgrade';
       
       proxy_pass http://app:3000;
+    }
+
+    location /api/ {    
+      proxy_pass http://server:3000/;
     }
   }
 }
